--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.34",
+    "typescript": "5.2.2"
   }
 }
