--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@types/node": "20.8.10",
     "@types/react": "18.2.34",
     "typescript": "5.2.2"
   }
