--- a/package.json
+++ b/package.json
@@ -6,16 +6,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.38.4",
+    "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.292.0",
     "next": "latest",
     "next-auth": "^4.24.4",
+    "next-themes": "^0.2.1",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "engines": {
     "node": ">=18"
